<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="id">1</string>
    <string name="author">Нетология. Университет интернет-профессий будущего</string>
    <string name="published">21 мая в 18:36</string>
    <string name="demo">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу.</string>
    <string name="content">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="likesCount">9999</string>
    <string name="sharesCount">999</string>
    <string name="viewsCount">99</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_edit_cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="videoLink">https://www.youtube.com/watch?v=xOgT2qYAzds</string>
    <string name="video_cover">Video cover</string>
    <string name="chooser_play_video">Play video</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s has published a new post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>