<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/toolsTopBarrier"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTopBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="contentEditText,sendContentButton" />

    <ImageButton
        android:id="@+id/sendContentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/contentEditText"
        app:layout_constraintTop_toBottomOf="@+id/toolsTopBarrier"
        app:srcCompat="@drawable/ic_baseline_send_24" />


    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="0dp"
        android:hint="@string/post_text"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sendContentButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolsTopBarrier" />

    <ImageButton
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_edit_cancel"
        app:constraint_referenced_ids="sendContentButton"
        app:layout_constraintBottom_toBottomOf="@+id/toolsTopBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contentEditText"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/editGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="undoButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
