<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="Post avatar"
        android:src="@drawable/ic_netology_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@id/barrierHeadContent"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierHeadContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:autoLink="web"
        android:padding="2dp"
        android:text="@string/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierHeadContent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierContentBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likesButton"
        style="@style/Widget.AppTheme.LikeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierContentBottom"
        tools:text="0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareButton"
        style="@style/Widget.AppTheme.ShareAndViewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@id/likesButton"
        app:layout_constraintStart_toEndOf="@id/likesButton"
        app:layout_constraintTop_toBottomOf="@id/barrierContentBottom"
        app:layout_constraintTop_toTopOf="@id/likesButton"
        tools:text="145671" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewsButton"
        style="@style/Widget.AppTheme.ShareAndViewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/min_spacing"
        app:icon="@drawable/ic_baseline_visibility_24dp"
        app:layout_constraintBottom_toBottomOf="@id/likesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierContentBottom"
        app:layout_constraintTop_toTopOf="@id/likesButton"
        tools:text="12314" />

</androidx.constraintlayout.widget.ConstraintLayout>